aliasing and identifying people, setting properties, and lib updated (issue #2 fixed)

--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "homepage": "https://github.com/samzilverberg/cordova-mixpanel-plugin-testapp",
   "cordovaPlugins": [
     "org.apache.cordova.console",
-    "com.samz.mixpanel"
+    "cordova-plugin-mixpanel"
   ],
   "cordovaPlatforms": [
+    "android"
   ]
 }
